--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-slick": "^0.25.2",
+    "react-youtube": "^7.11.2",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1"
